--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,21 @@
 cmake_minimum_required(VERSION 3.9)
 
+list(APPEND CMAKE_MODULE_PATH
+    ${CMAKE_SOURCE_DIR}/cmake/kit
+)
+include(UseKit)
+
 # Enable N-API C++ and JS Exception Handling
-set(CMAKE_C_FLAGS "-fexceptions")
-set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -fexceptions")
-set(CMAKE_XCODE_ATTRIBUTE_GCC_ENABLE_CPP_EXCEPTIONS "YES")
-SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
+# set(CMAKE_C_FLAGS "-fexceptions")
+# set(CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -fexceptions")
+# set(CMAKE_XCODE_ATTRIBUTE_GCC_ENABLE_CPP_EXCEPTIONS "NO")
+# SET(CMAKE_XCODE_ATTRIBUTE_CLANG_CXX_LIBRARY "libc++")
 set(CMAKE_OSX_DEPLOYMENT_TARGET "10.7")
-add_compile_definitions(NAPI_CPP_EXCEPTIONS)
+# add_compile_definitions(NAPI_CPP_EXCEPTIONS)
 
 # Support macOS
 IF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    set(cflags+ "-fvisibility=hidden")
+    # set(cflags+ "-fvisibility=hidden")
     set(CMAKE_XCODE_ATTRIBUTE_GCC_SYMBOLS_PRIVATE_EXTERN "YES")
 ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 
@@ -19,7 +24,7 @@ ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 project (teraflop)
 
 include_directories(${CMAKE_JS_INC})
-file(GLOB SOURCE_FILES "src/*.cpp" "src/*.h")
+file(GLOB SOURCE_FILES "src/*.kit")
 
 # Include N-API wrappers
 execute_process(COMMAND node -p "require('node-addon-api').include"
@@ -37,9 +42,25 @@ add_compile_definitions(NODE_ADDON_API_DISABLE_DEPRECATED)
 # Include gfx-rs WebGPU FFI
 get_filename_component(WGPU_FFI_DIR "third_party/wgpu/ffi" REALPATH)
 
+# Precompile Kit sources
+kit_precompile(KIT_C
+    "src/teraflop.kit"
+OPTIONS
+    "--lib"
+INCLUDES
+    ${INCLUDE_DIRECTORIES}
+    ${CMAKE_SOURCE_DIR}/src
+    ${NODE_ADDON_API_DIR}
+    ${NODE_ADDON_API_DIR}/src
+    ${WGPU_FFI_DIR}
+DEFINITIONS
+    "NAPI_VERSION=3"
+    "NODE_ADDON_API_DISABLE_DEPRECATED"
+)
+
 # Target Library
 
-add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
+add_library(${PROJECT_NAME} SHARED ${KIT_C} ${CMAKE_JS_SRC})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_JS_INC})
